<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="197dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/mul"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/sub"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/div"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button8"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSqrt"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/sqrt"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:textSize="80sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>